# spotifycontroller

./: .gitignore  README.md  pyproject.toml
.github/workflows/: validate.yml
docs/: PROJECT_SYNOPSIS.md
mappings/mixxx/: Vestax-VCI-380-scripts.js  Vestax-VCI-380.midi.xml
spotifycontroller/: __init__.py  app.py  const.py
spotifycontroller/engine/: __init__.py  audio.py  deck.py  mixer.py
spotifycontroller/midi/: __init__.py  base.py  listener.py  monitor.py  vestax_vci380.py
spotifycontroller/mixxx/: __init__.py  audio_capture.py  integration.py  library.py
spotifycontroller/spotify/: __init__.py  auth.py  playback.py
spotifycontroller/ui/: __init__.py  console.py
