[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotifycontroller"
version = "0.0.1"
description = "DJ controller bridge for Spotify — maps MIDI hardware to Spotify playback"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "spotipy>=2.24.0",
    "python-rtmidi>=1.5.8",
    "mido>=1.3.2",
]

[project.scripts]
spotifycontroller = "spotifycontroller.app:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
