[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotifycontroller"
version = "0.0.1"
description = "DJ controller bridge for Spotify — maps MIDI hardware to Spotify playback"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "spotipy>=2.24.0",
    "python-rtmidi>=1.5.8",
    "mido>=1.3.2",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
audio = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]

[project.scripts]
spotifycontroller = "spotifycontroller.app:main"

[tool.setuptools.packages.find]
include = ["spotifycontroller*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
